-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.2, 6.x
-
None
-
-
6efb36436 (5.15)
The current code at https://github.com/qt/qtdeviceutilities/blob/694effb2afc14961cd9cbda56da6fa6e1e07c607/src/networksettings/connman/qnetworksettingsmanager_p.cpp#L185 only works correctly if there is 1 fixed and 1 dynamic interface.
For example, if there is no interface at all, it never adds one (since for that it needs to iterate through that loop). Also it looks like the intended handling of interfaces already existing does not work if one would have 2 interfaces (for one of them the path won't be equal, so a new interface will be added, even if it already exists).
A simple way to make connman startup without a device is to disable `eth*` interfaces:
# cat /etc/connman/main.conf [General] NetworkInterfaceBlacklist=eth
You can then plug a wifi stick or unload/reload your wifi driver.
| For Gerrit Dashboard: QTBUG-102816 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 411029,2 | Fix having zero initial technologies (interfaces) on device | 6.3 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |
| 411030,2 | Fix having zero initial technologies (interfaces) on device | tqtc/lts-6.2 | qt/tqtc-qtdeviceutilities | Status: MERGED | +2 | 0 |
| 411041,3 | Fix having zero initial technologies (interfaces) on device | dev | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |
| 640253,2 | Fix having zero initial technologies (interfaces) on device | 5.15 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |