Fix having zero initial technologies (interfaces) on device

We always expect to have at least one technology available
when new technology is added via onTechnologyAdded

Pick-to: 5.15 6.2 6.3
Fixes: QTBUG-102816
Change-Id: Ia4f1c0b807ea14645a27bb1bc758f8879c5c2473
Reviewed-by: <schilling@mueller-elektronik.de>
Reviewed-by: Teemu Holappa <teemu.holappa@qt.io>